# lv_port_linux

./: .gitignore  CMakeLists.txt  build-pi.sh  lv_conf.h  lv_conf_benchmark_neon.h  lv_conf_benchmark_sw.h  lv_conf_render.h
scripts/: gen_wl_protocols.sh
src/: benchmark.c  main.c  render.c
